--- a/cursos.html
+++ b/cursos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia Prime | Inicio</title>
+    <title>Academia Prime | Cursos</title>
     <link rel="shortcut icon" href="./assets/img/logotipo original.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -19,7 +19,7 @@
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
             <ul class="nav-list">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="cursos.html">CURSOS</a></li>
                 <li><a href="#">MI CUENTA</a></li>
                 <li><a href="#">CONTACTOS</a></li>
@@ -32,7 +32,7 @@
                     style="font-weight: 800; color: #c657e6;">cultivamos talentos.</span></h1>
             <p>Clases online y en vivo dictada por profesionales especializados en cada área de <span
                     style="color: #c657e6; font-weight: 800;">Diseño y AudioVisual.</span></p>
-            <a href="cursos.html" class="cursos-conocerbutton">Descubre nuestros cursos</a>
+            <a href="micuenta.html" class="cursos-conocerbutton">Mi Cuenta | Plataforma</a>
         </section> <!--BIENVENIDA-->
         <section class="empresas"> <!--EMPRESAS-->
             <h2 style="font-weight: 800;">Cursos avalados por <span style="font-weight: 800; color: #c657e6;">distintas
@@ -46,79 +46,6 @@
                 <img src="./assets/img/empresa5.png" alt="Empresa 3">
             </div>
         </section> <!--EMPRESAS-->
-        <section class="stats-section"> <!--ESTADISTICAS-->
-            <div class="stats">
-                <div class="stat">
-                    <h3>+3.000</h3>
-                    <p>Estudiantes en nuestra academia</p>
-                </div>
-                <div class="stat">
-                    <h3>+94%</h3>
-                    <p>Finalización de cursos y certificación</p>
-                </div>
-                <div class="stat">
-                    <h3>+4</h3>
-                    <p>Cursos disponibles</p>
-                </div>
-            </div>
-        </section> <!--ESTADISTICAS-->
-        <section class="team-section"> <!--EQUIPO-->
-            <h3 style="font-weight: 800;">Conoce a nuestro <span style="color: #c657e6;">equipo de tutores</span></h3>
-            <div class="team-members">
-                <div class="team-member">
-                    <img src="./assets/img/personal10.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Edgar Veiga (50)</h4>
-                    <p style="font-style: italic;">Diseño DEPORTIVO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal1.png" alt="Tutor 1">
-                    <h4 style="color: #c657e6;">Lazaro Nieves (32)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal5.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Arturo Flores (46)</h4>
-                    <p style="font-style: italic;">Diseño WEB</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal6.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Adrian Marin (29)</h4>
-                    <p style="font-style: italic;">Diseño DEPORTIVO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal2.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Avril Berriel (38)</h4>
-                    <p style="font-style: italic;">Diseño Y Desarrollo WEB</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal3.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Marisa Silva (31)</h4>
-                    <p style="font-style: italic;">Diseño BÁSICO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal4.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Rocio Vargas (28)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal7.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Luisa Aguiar (40)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal8.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Federica Presa (23)</h4>
-                    <p style="font-style: italic;">Diseño DEPORTIVO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal9.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Yoana Esteves (32)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-            </div>
-            <h4 style="font-weight: 800; max-width:1200px; margin: 0 auto;"><span style="color: #c657e6;">¡Y muchos
-                    más!</span> <span style="color: white;">Que te estarán acompañando en tu recorrido.</span></h4>
-        </section> <!--EQUIPO-->
         <section id="cursos">
             <h2 style="color: #ffffff; font-weight: 800;">Los <span style="color: #c657e6;">Cursos</span> más valorados por la comunidad</h2>
             <div class="curso-container">
