--- a/cursos.html
+++ b/cursos.html
@@ -21,8 +21,7 @@
             <ul class="nav-list">
                 <li><a href="index.html">INICIO</a></li>
                 <li><a href="cursos.html">CURSOS</a></li>
-                <li><a href="#">MI CUENTA</a></li>
-                <li><a href="#">CONTACTOS</a></li>
+                <li><a href="micuenta.html">MI CUENTA</a></li>
             </ul>
         </nav>
     </header> <!--ENCABEZADO-->
