--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
             <ul class="nav-list">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="cursos.html">CURSOS</a></li>
-                <li><a href="#">MI CUENTA</a></li>
-                <li><a href="#">CONTACTOS</a></li>
+                <li><a href="micuenta.html">MI CUENTA</a></li>
             </ul>
         </nav>
     </header> <!--ENCABEZADO-->
