mejorando la base de datos

--- a/micuenta.html
+++ b/micuenta.html
@@ -37,7 +37,7 @@
                 <input type="password" id="password" name="password" placeholder="Contraseña" required>
                 <button type="button" id="togglePassword"><i class="fa fa-eye"></i></button>
             </div>
-            <input type="submit" value="Iniciar Sesión">
+            <input type="submit" value="Iniciar Sesión" id="loginButton">
         </div>
         <div id="alertMessage"></div>
     </main>
