--- a/diseñodeportivo.html
+++ b/diseñodeportivo.html
@@ -38,7 +38,7 @@
         </section>
         <div class="container-plataforma">
             <h2 style="color: white; max-width: 700px; margin: 0 auto; font-size: 16px;margin-top: 20px;">En la otra plataforma, podrás ver tus notas, como también, el foro de consultas y mucho más.</h2>
-            <h3 style="color: white; max-width: 700px; margin: 0 auto; font-size: 14px;margin-top: 20px;"><a style="text-decoration: none; color: #c657e6;" href="">Aprieta aquí</a> para ver las clases en vivo o <a style="text-decoration: none; color: #c657e6;" href="">Aprieta aquí</a> Para ingresar a la 2da plataforma</h3>
+            <h3 style="color: white; max-width: 700px; margin: 0 auto; font-size: 14px;margin-top: 20px;"><a style="text-decoration: none; color: #c657e6;" href="https://meet.google.com/fhy-uqyn-eqr">Aprieta aquí</a> para ver las clases en vivo o <a style="text-decoration: none; color: #c657e6;" href="https://classroom.google.com/c/NjU1NTQwMTc4NzM4?cjc=vj224uy">Aprieta aquí</a> Para ingresar a la 2da plataforma</h3>
         <div class="chat-btn">
             <a href="https://www.instagram.com/academyprimeuy/" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/img/instagram.png" alt="Instagram Chat">
