--- a/index.html
+++ b/index.html
@@ -118,40 +118,11 @@
             <h4 style="font-weight: 800; max-width:1200px; margin: 0 auto;"><span style="color: #c657e6;">¡Y muchos
                     más!</span> <span style="color: white;">Que te estarán acompañando en tu recorrido.</span></h4>
         </section> <!--EQUIPO-->
-        <section id="cursos">
-            <h2 style="color: #ffffff; font-weight: 800;">Los <span style="color: #c657e6;">Cursos</span> más valorados por la comunidad</h2>
-            <div class="curso-container">
-                <div class="curso">
-                    <h3>Diseño Básico</h3>
-                    <button class="button">Descargar PDF</button>
-                </div>
-                <div class="curso">
-                    <h3>Diseño Web</h3>
-                    <button class="button">Descargar PDF</button>
-                </div>
-                <div class="curso">
-                    <h3>Diseño Deportivo</h3>
-                    <button class="button">Descargar PDF</button>
-                </div>
-                <div class="curso">
-                    <h3>Diseño de Marca</h3>
-                    <button class="button">Descargar PDF</button>
-                </div>
-                <div class="curso">
-                    <h3>Figma</h3>
-                    <button class="button">Descargar PDF</button>
-                </div>
-                <div class="curso">
-                    <h3>Community Manager</h3>
-                    <button class="button">Descargar PDF</button>
-                </div>
-            </div>
-        </section>
-        <div class="chat-btn">
+        <div class="chat-btn"> <!--BOTÓN FLOTANTE-->
             <a href="https://www.instagram.com/academyprimeuy/" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/img/instagram.png" alt="Instagram Chat">
             </a>
-        </div>
+        </div> <!--BOTÓN FLOTANTE-->
     </main>
     <footer>
         <div>
