--- a/index.html
+++ b/index.html
@@ -118,6 +118,36 @@
             <h4 style="font-weight: 800; max-width:1200px; margin: 0 auto;"><span style="color: #c657e6;">¡Y muchos
                     más!</span> <span style="color: white;">Que te estarán acompañando en tu recorrido.</span></h4>
         </section> <!--EQUIPO-->
+        <div class="steps">
+            <h1>¿Cómo <span style="font-weight: 800; color: #c657e6;">me inscribo</span> a uno de los cursos?</h1>
+            <div class="step">
+                <div class="step-number">1</div>
+                <div class="step-description">
+                    <h3>MENSAJE A NUESTRO INSTAGRAM</h3>
+                    <p>El chat del instagram @academyprimeuy es manejado por nuestra IA la cual se encargará de su inscripción 
+                    rápidamente. Solo debes mandar <span style="font-weight: 700; color: #c657e6;">"INSCRIPCIÓN DE CURSO"</span> y el te dará los pasos a seguir.</p>
+                </div>
+            </div>
+            <div class="step">
+                <div class="step-number">2</div>
+                <div class="step-description">
+                    <h3>SOLICITUD DE "MI CUENTA"</h3>
+                    <p>Una vez hecho todo el proceso de inscripción y pago, nuestra IA se encargará de darte tu nueva cuenta para poder acceder a
+                        las clases y material del curso, el cual demora aproximadamente 1 hora máximo.
+                    </p>
+                </div>
+            </div>
+            <div class="step">
+                <div class="step-number">3</div>
+                <div class="step-description">
+                    <h3>¡Y LISTO!</h3>
+                    <p>Estarás pronto para comenzar las clases en nuestro instituto la cual se te dará disponibilidad de horarios y días para comenzar
+                        las clases en vivo y online.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </div>
         <div class="chat-btn"> <!--BOTÓN FLOTANTE-->
             <a href="https://www.instagram.com/academyprimeuy/" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/img/instagram.png" alt="Instagram Chat">
