--- a/diseñodeportivo.html
+++ b/diseñodeportivo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia Prime | Inicio</title>
+    <title>Academia Prime | Diseño Deportivo</title>
     <link rel="shortcut icon" href="./assets/img/logotipo original.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -26,9 +26,20 @@
         </nav>
     </header> <!--ENCABEZADO-->
     <main>
+        <div class="info-clase">
+            <h1 class="bienvenido-a-clase" style="color: white; font-weight: 800;"><span style="color: #c657e6;">Bienvenid@</span> al curso de <span style="color: #c657e6;">DISEÑO DEPORTIVO</span></h1>
+            <div class="class-description">
+                <p><strong style="color: #c657e6; font-weight: 800;">Clase:</strong> Comisión #50</p>
+                <p><strong style="color: #c657e6; font-weight: 800;">Profesor:</strong> Bruno Requel Merla</p>
+                <p><strong style="color: #c657e6; font-weight: 800;">Número de Clase:</strong> #50</p>
+                <p><strong style="color: #c657e6; font-weight: 800;">Materia:</strong> Diseño Deportivo</p>
+                <p><strong style="color: #c657e6; font-weight: 800;">Día y Hora:</strong> Miércoles y Viernes de 19:00 a 20:30 hs</p>
+                <img src="./assets/img/logotipo original.png" alt="Clase" style="width: 130px;">
+            </div>
+        </div>
         <section class="videos">
             <div class="video">
-                <h2 style="color: white;"><span style="color: #c657e6; font-weight: 800;">Clase 1:</span> Introducción al Diseño Gráfico</h2>
+                <h2 style="color: white;"><span style="color: #c657e6; font-weight: 800;">Clase 1:</span> Presentación del curso y objetivos.</h2>
                 <video controls>
                     <source src="" type="video/mp4">
                     Tu navegador no soporta el elemento de video.
@@ -37,13 +48,18 @@
             <!-- Añade más videos según sea necesario -->
         </section>
         <div class="container-plataforma">
-            <h2 style="color: white; max-width: 700px; margin: 0 auto; font-size: 16px;margin-top: 20px;">En la otra plataforma, podrás ver tus notas, como también, el foro de consultas y mucho más.</h2>
-            <h3 style="color: white; max-width: 700px; margin: 0 auto; font-size: 14px;margin-top: 20px;"><a style="text-decoration: none; color: #c657e6;" href="https://meet.google.com/fhy-uqyn-eqr">Aprieta aquí</a> para ver las clases en vivo o <a style="text-decoration: none; color: #c657e6;" href="https://classroom.google.com/c/NjU1NTQwMTc4NzM4?cjc=vj224uy">Aprieta aquí</a> Para ingresar a la 2da plataforma</h3>
-        <div class="chat-btn">
-            <a href="https://www.instagram.com/academyprimeuy/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/img/instagram.png" alt="Instagram Chat">
-            </a>
-        </div>
+            <h2 style="color: white; max-width: 700px; margin: 0 auto; font-size: 16px;margin-top: 20px;">En la otra
+                plataforma, podrás ver tus notas, como también, el foro de consultas y mucho más.</h2>
+            <h3 style="color: white; max-width: 700px; margin: 0 auto; font-size: 14px;margin-top: 20px;"><a
+                    style="text-decoration: none; color: #c657e6;" href="https://meet.google.com/fhy-uqyn-eqr">Aprieta
+                    aquí</a> para ver las clases en vivo o <a style="text-decoration: none; color: #c657e6;"
+                    href="https://classroom.google.com/c/NjU1NTQwMTc4NzM4?cjc=vj224uy">Aprieta aquí</a> Para ingresar a
+                la 2da plataforma</h3>
+            <div class="chat-btn">
+                <a href="https://www.instagram.com/academyprimeuy/" target="_blank" rel="noopener noreferrer">
+                    <img src="./assets/img/instagram.png" alt="Instagram Chat">
+                </a>
+            </div>
     </main>
     <footer>
         <div>
