--- a/index.html
+++ b/index.html
@@ -61,63 +61,10 @@
                 </div>
             </div>
         </section> <!--ESTADISTICAS-->
-        <section class="team-section"> <!--EQUIPO-->
-            <h3 style="font-weight: 800;">Conoce a nuestro <span style="color: #c657e6;">equipo de tutores</span></h3>
-            <div class="team-members">
-                <div class="team-member">
-                    <img src="./assets/img/personal10.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Edgar Veiga (50)</h4>
-                    <p style="font-style: italic;">Diseño DEPORTIVO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal1.png" alt="Tutor 1">
-                    <h4 style="color: #c657e6;">Lazaro Nieves (32)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal5.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Arturo Flores (46)</h4>
-                    <p style="font-style: italic;">Diseño WEB</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal6.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Adrian Marin (29)</h4>
-                    <p style="font-style: italic;">Diseño DEPORTIVO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal2.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Avril Berriel (38)</h4>
-                    <p style="font-style: italic;">Diseño Y Desarrollo WEB</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal3.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Marisa Silva (31)</h4>
-                    <p style="font-style: italic;">Diseño BÁSICO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal4.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Rocio Vargas (28)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal7.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Luisa Aguiar (40)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal8.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Federica Presa (23)</h4>
-                    <p style="font-style: italic;">Diseño DEPORTIVO</p>
-                </div>
-                <div class="team-member">
-                    <img src="./assets/img/personal9.png" alt="Tutor 2">
-                    <h4 style="color: #c657e6;">Yoana Esteves (32)</h4>
-                    <p style="font-style: italic;">Diseño de MARCA</p>
-                </div>
-            </div>
-            <h4 style="font-weight: 800; max-width:1200px; margin: 0 auto;"><span style="color: #c657e6;">¡Y muchos
-                    más!</span> <span style="color: white;">Que te estarán acompañando en tu recorrido.</span></h4>
-        </section> <!--EQUIPO-->
+        <div class="certificado-section">
+            <h3>Certificado <span style="color: #c657e6; font-weight: bolder;">"Prime"</span></h3>
+            <img src="./assets/img/CERTIFICADO.png" alt="Certificado de mi Academia">
+        </div>
         <div class="steps">
             <h1>¿Cómo <span style="font-weight: 800; color: #c657e6;">me inscribo</span> a uno de los cursos?</h1>
             <div class="step">
