--- a/diseñodeportivo.html
+++ b/diseñodeportivo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia Prime | Diseño Deportivo</title>
+    <title>Academia Prime | Bootcamp Diseño Deportivo</title>
     <link rel="shortcut icon" href="./assets/img/logotipo original.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -53,7 +53,7 @@
             <h3 style="color: white; max-width: 700px; margin: 0 auto; font-size: 14px;margin-top: 20px;"><a
                     style="text-decoration: none; color: #c657e6;" href="https://meet.google.com/fhy-uqyn-eqr">Aprieta
                     aquí</a> para ver las clases en vivo o <a style="text-decoration: none; color: #c657e6;"
-                    href="https://classroom.google.com/c/NjU1NTQwMTc4NzM4?cjc=vj224uy">Aprieta aquí</a> Para ingresar a
+                    href="https://classroom.google.com/c/NjU1OTk2ODA0MTYz?cjc=r3dobhu">Aprieta aquí</a> Para ingresar a
                 la 2da plataforma</h3>
             <div class="chat-btn">
                 <a href="https://www.instagram.com/academyprimeuy/" target="_blank" rel="noopener noreferrer">
